[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/particle/ParticleBase.gd" type="Script" id=1]

[node name="ParticleBase" type="AnimatedSprite"]
pause_mode = 1
script = ExtResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[connection signal="animation_finished" from="." to="." method="_on_ParticleBase_animation_finished"]
[connection signal="tree_exiting" from="." to="." method="_on_ParticleBase_tree_exiting"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
